# ChangeLog for net-libs/libnetfilter_cthelper
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_cthelper/ChangeLog,v 1.1 2012/10/29 09:42:03 pinkbyte Exp $

*libnetfilter_cthelper-1.0.0 (29 Oct 2012)

  29 Oct 2012; Sergey Popov <pinkbyte@gentoo.org>
  +libnetfilter_cthelper-1.0.0.ebuild, +metadata.xml:
  Initial commit
