@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST libnetfilter_cthelper-1.0.0.tar.bz2 275229 SHA256 07618e71c4d9a6b6b3dc1986540486ee310a9838ba754926c7d14a17d8fccf3d SHA512 f0372daee0edbf4c27ee80eadd4ce786a4b67b39c0b9d22e88bc9adcbdffd6676eb9df01b933ee64d2fcea9c05a9ca9070c94e907277d69acbd22ae9a3c74e45 WHIRLPOOL a94915f51b0dd4dbf165c195fff2291ad414147ad068ed3eec4d29bf4850d128c83f6f75b94853bd840334e77f68c7a74dbc7aa50d7745ff9a0074621385afc0
-EBUILD libnetfilter_cthelper-1.0.0.ebuild 825 SHA256 6019edea65ffbdfa7db1b27e6daadb21fdfb7069e8d3c6ddc8b9cb7e6f99c976 SHA512 030ba882f479f4d70c750b719f114c7c129e7d3fe817ae0967cc8e923a3ba8cb37ed8db1aec80c62e73be7377bb17e7661015eb14c647bde19dac99b5c9f44ea WHIRLPOOL a1f6ea60407ab631a799cc065580adec88d84a2df0c6a1cada8a1c52d1be1d8b3fdefc01df5004ae46b3670130ca8ada2dbfd1a0c358b951043d988573db2aa9
-MISC ChangeLog 401 SHA256 5986cba9835ae1e949cd7de4614bc2d04314e63f630aa0433d31cf2ffea936fd SHA512 00e0e9523af35857939f565b1dcbabad9228f9394079559ce5d20cf74c0d4346b962b65c9b1685945be26c6f3ba8d6303831bc2bc83183cc36a31cff81552172 WHIRLPOOL 2eff280cfa70d4e389685aa9308bc753eb3326e51aeb8e345a31b2e3007d4bdaac3d7b439ad9cbfa357e08afbd2abdb50ba18fcf746eab39d439560c5f1b2c90
+EBUILD libnetfilter_cthelper-1.0.0.ebuild 826 SHA256 656ac991486731e3297c8371940002bc5ce1b203918f8866344da2add1ed1c54 SHA512 d7333f3531b0ff02a4a3608ecb316c4454deff54e14123f81432df2535893762fab9e6ff393e1b460a0d1608f398d4c5910ee4450db8da9c6be152716f687caa WHIRLPOOL a9f6ec6cee14cbf4c3625581b097e4404f0e0785fa373848e0243230ff7adcbcf8472644e551e83fc9be7ad4ba7324f7fd3dcfe7dab7cc677520b0a335186e4c
+MISC ChangeLog 512 SHA256 9b0b16e30f7ef56f35d8e4f9edf331a5cdce5531d38cc3904f6ecfccb7f8e523 SHA512 3569a039be9039adc2a44b1de26b5ce64372a755eadaff3b07a3aec92c17c8d6b5f512a21ed635ebc34fb4aa7ef540ceb0f8a09fe0beb1daff11fb0a67fca305 WHIRLPOOL 704526c9c5597eec86bd4998d9e938d8431665ff76237f4e2d5e8bec17c72dd00f68845c62e40b44b44aeffd3499993e56f6f4518420225028643e9436d6a457
 MISC metadata.xml 160 SHA256 39e232fc7ec88ca0b077cb3950cb39d15cd990842b88d5bfe14f02f34d72f37b SHA512 3ac3a74a7cdf45b14884d967b10e4752f9cb06c579f6d7baf921f9be5450cbe7536c2e5a480ac3c95156eb6abb32e68f74cecc86b9ac0dcc4e0e1b4b255c3e20 WHIRLPOOL f7504ce9e3e8a58d19bba5448305f806c2ae01d0a8d2cf09d6bc6a089a6e1c28a1b12a80bb6020584b5ed21df94e4936b1695a54548704cb8679660b6b807955
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCOeEcACgkQVWmRsqeSphMBtgCbBuhk3+XAD2cFXa6FXwqYaNrp
+Ah8AnjPPW9oVJWSv+V7Jm4tF2zlvQBFS
+=IKEV
+-----END PGP SIGNATURE-----
