@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libnetfilter_cthelper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_cthelper/ChangeLog,v 1.1 2012/10/29 09:42:03 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_cthelper/ChangeLog,v 1.2 2012/10/29 12:36:22 jer Exp $
+
+  29 Oct 2012; Jeroen Roovers <jer@gentoo.org>
+  libnetfilter_cthelper-1.0.0.ebuild:
+  Marked ~hppa (bug #440108).
 
 *libnetfilter_cthelper-1.0.0 (29 Oct 2012)
 
